@@ -1,6 +1,7 @@
 Version 0.3.1~dev
 
 	* Make sure logger is always set, refs: #2320.
+	* Add stop_command to stop running streams.
 
 Version 0.3.0 Released on 2009/08/05
 
